tickting/infra/k8s/expiration.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration
  template:
    metadata:
      labels:
        app: expiration
    spec:
      containers:
        - name: expiration
          # imagePullPolicy: Never
          # image: us.gcr.io/ticketing-dev/auth
          image: xtophe02/expiration
