tickting/infra/k8s/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          # imagePullPolicy: Never
          # image: us.gcr.io/ticketing-dev/auth
          image: xtophe02/client
          # env:
          #   - name: JWT_KEY
          #     valueFrom:
          #       secretKeyRef:
          #         name: jwt-secret
          #         key: JWT_KEY
---
apiVersion: v1
kind: Service
metadata:
  name: client-srv
spec:
  # type: NodePort
  selector:
    app: client
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: client
      # nodePort: 31515
