tickting/infra/k8s/expiration-redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-redis-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expiration-redis
  template:
    metadata:
      labels:
        app: expiration-redis
    spec:
      containers:
        - name: expiration-redis
          # imagePullPolicy: Never
          # image: us.gcr.io/ticketing-dev/auth-mongo
          image: redis
          # ports:
          #   - containerPort: 4005
---
apiVersion: v1
kind: Service
metadata:
  name: expiration-redis-srv
spec:
  # type: NodePort
  selector:
    app: expiration-redis
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
      name: expiration-redis
      # nodePort: 31515
