tickting/infra/k8s/nats.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          # imagePullPolicy: Never
          # image: us.gcr.io/ticketing-dev/auth
          image: nats-streaming:0.17.0
          args:
            [
              "-p",
              "4222",
              "-m",
              "8222",
              "-hbi",
              "5s",
              "-hbt",
              "5s",
              "-hbf",
              "2",
              "-SD",
              "-cid",
              "ticketing",
            ]
---
apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  # type: NodePort
  selector:
    app: nats
  ports:
    - port: 4222
      targetPort: 4222
      protocol: TCP
      name: nats-client
    - port: 8222
      targetPort: 8222
      protocol: TCP
      name: nats-mon
