tickting/infra/k8s/orders-mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-mongo-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-mongo
  template:
    metadata:
      labels:
        app: orders-mongo
    spec:
      containers:
        - name: orders-mongo
          # imagePullPolicy: Never
          # image: us.gcr.io/ticketing-dev/auth-mongo
          image: mongo
          # ports:
          #   - containerPort: 4005
---
apiVersion: v1
kind: Service
metadata:
  name: orders-mongo-srv
spec:
  # type: NodePort
  selector:
    app: orders-mongo
  ports:
    - port: 27017
      targetPort: 27017
      protocol: TCP
      name: db-orders
      # nodePort: 31515
