tickting/infra/k8s/orders.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          # imagePullPolicy: Never
          # image: us.gcr.io/ticketing-dev/auth
          image: xtophe02/orders
---
apiVersion: v1
kind: Service
metadata:
  name: orders-srv
spec:
  # type: NodePort
  selector:
    app: orders
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: orders
      # nodePort: 31515
