tickting/infra/k8s/payments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payments-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payments
  template:
    metadata:
      labels:
        app: payments
    spec:
      containers:
        - name: payments
          # imagePullPolicy: Never
          # image: us.gcr.io/ticketing-dev/auth
          image: xtophe02/payments
---
apiVersion: v1
kind: Service
metadata:
  name: payments-srv
spec:
  # type: NodePort
  selector:
    app: payments
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: payments
      # nodePort: 31515
